<resources>
    <string name="salary_payable_wages">应发：</string>
    <string name="salary_real_wages">实发：</string>
    <string name="settlement_start_time">结算时间(起)：</string>
    <string name="settlement_end_time">结算时间(止)：</string>
    <string name="label_performance_salary">绩效工资：</string>
    <string name="salary_total_payable_wages">总计应发：</string>
    <string name="salary_total_real_wages">总计实发：</string>
    <string name="title_payroll_detail">工资详情</string>
    <string name="label_bill_image_size">图片大小：</string>
    <string name="bill_detail">票据详情</string>
    <string name="info_search_company">点击搜索公司</string>
    <string name="filter_condition">筛选条件</string>
    <string name="label_currency">币种：%1$s </string>
    <string name="audit_pass">审核通过</string>
    <string name="audit_post">提交审核</string>
    <string name="repulse">打回</string>
    <string name="detail_account">记账凭证详情</string>
    <string name="reason_repulse">请填写打回理由</string>
    <string name="audit_pass_confirm">确认审核通过？</string>
    <string name="account_posting_confirm">确认过账</string>
    <string name="account_posting_message">继续操作该记账凭证将确认过账，之后不可修改，是否继续？</string>
    <string name="posting">提交中，请稍候...</string>
    <string name="error_audit_posting">出错了，提交审核失败！</string>
    <string name="audit_post_success">提交审核成功！</string>
    <string name="audit_post_failed">提交审核失败！</string>
    <string name="error_account_post_failed">出错了，记账凭证过账失败！</string>
    <string name="tab_to_document">待制单</string>
    <string name="tab_to_approve">待审核</string>
    <string name="tab_to_account">待过账</string>
    <string name="tab_accounted">已过账</string>
    <string name="detail_original">原始凭证详情</string>
    <string name="document_type">凭证类型</string>
    <string name="delete_purchase_sale">是否删除 %1$s 购销信息?</string>
    <string name="error_get_document_type">获取凭证类型失败</string>
    <string name="check_pass">校正通过</string>
    <string name="check_post">提交校对</string>
    <string name="check_not_pass">校正不通过</string>
    <string name="msg_check_pass">校对通过代表该票据符合入账标准，继续操作后不可撤销，是否继续？</string>
    <string name="create_account">生成记账凭证</string>
    <string name="ask_create_account">是否生成一笔记账凭证吗？</string>
    <string name="check_post_success">提交校对成功！</string>
    <string name="check_post_failed">提交校对失败！</string>
    <string name="error_check_failed">出错了，提交校对失败！</string>
    <string name="error_create_account_failed">出错了，生成记账凭证失败！</string>
    <string name="tab_to_perfect">待完善</string>
    <string name="tab_to_check">待校对</string>
    <string name="tab_account_entry">待入账</string>
    <string name="assets">资产</string>
    <string name="liabilities">负债</string>
    <string name="assets_liabilities">资产负债表</string>
    <string name="error_get_profit_data">获取利润表数据出错了</string>
    <string name="error_get_depart_failed">获取企业部门列表失败</string>
    <string name="bill_reimbursement">票据报销统计</string>
    <string name="report_finance">财务报表</string>
    <string name="personal_reimbursement">个人报销统计</string>
    <string name="error_get_org_user_failed">获取企业用户列表失败</string>
    <string name="report_profit">利润表</string>
    <string name="text_line_number">行次</string>
    <string name="text_amount">金额</string>
    <string name="error_get_reimbursement_sort">本月报销排行列表获取失败！</string>
    <string name="error_get_reimbursement_percentage">获取本月报销占比数据失败！</string>
    <string name="reason_reimbursement">报销事由</string>
    <string name="depart_reimbursement">部门报销</string>
    <string name="bill_number">凭证号：</string>
    <string name="attachment_number">附件数：</string>
    <string name="period_date">会计时间：</string>
    <string name="preview_original_picture">查看原图凭证</string>
    <string name="total_debtor">借方合计：￥</string>
    <string name="total_lender">贷方合计：￥</string>
    <string name="upload_bill">上传票据</string>
    <string name="personal_statistics">个人统计</string>
    <string name="original_perfect">完善票据</string>
    <string name="reimbursement_sort">本月报销排行</string>
    <string name="reimbursement_percentage">月底报销占比</string>
    <string name="month_percentage">本月占比</string>
    <string name="year_reimbursement">本年报销总额</string>
    <string name="month_reimbursement">本月报销总额</string>
    <string name="depart_month_reimbursement">本月各部门报销总览</string>
    <string name="reason_month_reimbursement">本月报销事由总览</string>
    <string name="bill_name">发票名称：</string>
    <string name="bill_amount">金额(&#165;)：</string>
    <string name="bill_amount_total">价税合计(&#165;)：</string>
    <string name="bill_type">凭证类型：</string>
    <string name="bill_payee">收款人：</string>
    <string name="bill_drawer">开票人：</string>
    <string name="bill_review">复核人：</string>
    <string name="bill_request_number">编号：</string>
    <string name="bill_seller_company">公司名称：</string>
    <string name="bill_seller_address">地址：</string>
    <string name="bill_seller_phone">电话：</string>
    <string name="bill_seller_number">纳税人识别号：</string>
    <string name="bill_purchase_name">购货方信息：</string>
    <string name="bill_date_time">录入时间</string>
    <string name="bill_sales_info">销货方信息</string>
    <string name="purchase_sales_info">购销信息</string>
    <string name="uploader">上传人</string>
    <string name="bill_basic_info">票据基本信息</string>
    <string name="report_current_assets">流动资产：</string>
    <string name="report_current_assets_total">流动资产合计：</string>
    <string name="report_non_current_assets">非流动资产：</string>
    <string name="report_assets_total">资产合计：</string>
    <string name="non_current_assets_total">非流动资产合计：</string>
    <string name="report_current_liabilities">流动负债：</string>
    <string name="report_current_liabilities_total">流动负债合计：</string>
    <string name="report_non_current_liabilities">非流动负债：</string>
    <string name="report_non_current_liabilities_total">非流动负债合计：</string>
    <string name="report_liabilities_total">负债合计：</string>
    <string name="report_owner_equity">所有者权益（或股东权益）：</string>
    <string name="report_owner_equity_total">所有者权益（或股东权益）合计：</string>
    <string name="report_equity_liabilities_total">负债和所有者权益（或股东权益）合计：</string>
    <string name="report_assets_liabilities">资产负债表</string>
    <string name="report_bill_statistics">票据报销统计</string>
    <string name="report_personal_statistics">个人报销统计</string>
    <string name="enter_datetime_select">录入时间筛选</string>
    <string name="enter_datetime">录入时间</string>
    <string name="account_datetime">记账日期：</string>
    <string name="account_debtor">借方&#165;</string>
    <string name="account_lender">贷方&#165;</string>
    <string name="account_number">科目编号：</string>
    <string name="account_debtor_amount">借方金额：￥</string>
    <string name="account_lender_amount">贷方金额：￥</string>
    <string name="service_name">货物或应税劳务名称：</string>
    <string name="original_specification">规格型号：</string>
    <string name="original_unit_price">单价(&#165;)：</string>
    <string name="original_tax_amount">税额(&#165;)：</string>
    <string name="original_unit">单位：</string>
    <string name="original_number">数量：</string>
    <string name="original_rate">税率：</string>
</resources>
