<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.zjclugger.lib.utils.CommonUtils" />

        <variable
            name="Original"
            type="com.zjclugger.finance.webapi.entity.response.OriginalDetailResult" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color">

        <include
            android:id="@+id/nav_title_layout"
            layout="@layout/detail_title" />

        <TextView
            android:id="@+id/line_1"
            style="@style/Line"
            android:layout_below="@id/nav_title_layout" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/line_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_smallest">

                        <com.zjclugger.lib.view.LabelValueView
                            android:id="@+id/bill_uploader"
                            style="@style/billItem.LabelValueViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:label_text="@string/uploader"
                            app:label_text_color="@color/gray"
                            app:label_text_width="60dp" />

                        <com.zjclugger.lib.view.LabelValueView
                            android:id="@+id/bill_upload_date"
                            style="@style/billItem.LabelValueViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:label_text="@string/upload_date"
                            app:label_text_color="@color/gray"
                            app:label_text_width="60dp"
                            app:value_text="2019-11-29" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/bill_image_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin_small"
                        android:layout_weight="0.3"
                        android:background="@color/half_transparent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_preview_original"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_margin="@dimen/margin_small"
                            android:scaleType="fitXY"
                            app:imageUrl="@{Original.url}" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:padding="@dimen/margin_smallest"
                            android:text="@string/text_view"
                            android:textColor="@color/white" />
                    </RelativeLayout>

                </LinearLayout>

                <TextView style="@style/Line.Small" />

                <com.zjclugger.lib.view.ExtendLabelValueView
                    style="@style/Blue.PageItemTitleStyle"
                    app:label_text="@string/bill_basic_info" />

                <LinearLayout
                    style="@style/OriginalDetailItemLayout"
                    android:orientation="vertical">

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_doc_name"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_name"
                        app:value="@={Original.docName}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_doc_type"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_type"
                        app:value="@={Original.billType}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_total_small"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_amount"
                        app:value="@={Original.convertDoubleToString(Original.totalAmount)}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_total"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_amount_total"
                        app:value="@={Original.convertDoubleToString(Original.totalSmall)}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_payee"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_payee"
                        app:value="@={Original.payee}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_drawer"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_drawer"
                        app:value="@={Original.drawer}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_review"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_review"
                        app:value="@={Original.review}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_request_no"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_request_number"
                        app:value="@={Original.requestNumber}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_input_date"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_date_time"
                        app:value="@={Original.convertDateToString(Original.billDate)}" />

                </LinearLayout>

                <TextView
                    style="@style/Line.Small"
                    android:layout_below="@id/nav_layout" />

                <com.zjclugger.lib.view.ExtendLabelValueView
                    android:id="@+id/title_seller"
                    style="@style/Blue.PageItemTitleStyle"
                    app:label_text="@string/bill_sales_info" />

                <RelativeLayout style="@style/OriginalDetailItemLayout">

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_seller_name"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_seller_company"
                        app:value="@={Original.sellerName}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_seller_address"
                        style="@style/OriginalEditStyle"
                        android:layout_below="@id/letv_seller_name"
                        app:label_text="@string/bill_seller_address"
                        app:value="@={Original.sellerAddress}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_seller_phone"
                        style="@style/OriginalEditStyle"
                        android:layout_below="@id/letv_seller_address"
                        app:label_text="@string/bill_seller_phone"
                        app:value="@={Original.sellerPhone}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_seller_number"
                        style="@style/OriginalEditStyle"
                        android:layout_below="@id/letv_seller_phone"
                        app:label_text="@string/bill_seller_number"
                        app:value="@={Original.sellerNumber}" />

                </RelativeLayout>

                <TextView
                    style="@style/Line.Small"
                    android:layout_below="@id/nav_layout" />

                <com.zjclugger.lib.view.ExtendLabelValueView
                    android:id="@+id/title_buyer"
                    style="@style/Blue.PageItemTitleStyle"
                    app:label_text="@string/bill_purchase_name" />

                <RelativeLayout style="@style/OriginalDetailItemLayout">

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_purchaser_name"
                        style="@style/OriginalEditStyle"
                        app:label_text="@string/bill_seller_company"
                        app:value="@={Original.purchaserName}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_purchaser_address"
                        style="@style/OriginalEditStyle"
                        android:layout_below="@id/letv_purchaser_name"
                        app:label_text="@string/bill_seller_address"
                        app:value="@={Original.purchaserAddress}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_purchaser_phone"
                        style="@style/OriginalEditStyle"
                        android:layout_below="@id/letv_purchaser_address"
                        app:label_text="@string/bill_seller_phone"
                        app:value="@={Original.purchaserPhone}" />

                    <com.zjclugger.lib.view.LabelEditTextView
                        android:id="@+id/letv_purchaser_number"
                        style="@style/OriginalEditStyle"
                        android:layout_below="@id/letv_purchaser_phone"
                        app:label_text="@string/bill_seller_number"
                        app:value="@={Original.purchaserNumber}" />
                </RelativeLayout>

                <TextView
                    style="@style/Line.Small"
                    android:layout_below="@id/nav_layout" />

                <com.zjclugger.lib.view.ExtendLabelValueView
                    android:id="@+id/title_detail_list"
                    style="@style/Blue.PageItemTitleStyle"
                    app:label_text="@string/purchase_sales_info" />

                <LinearLayout
                    style="@style/OriginalDetailItemLayout"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/original_detail_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical" />

                    <com.zjclugger.lib.view.FloatButtonView
                        android:id="@+id/fbv_item_add_view"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin_normal"
                        app:fbv_image_src="@mipmap/ic_add_blue" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>